# alphapose_extra_cpp

./: CMakeLists.txt  LICENSE  README.md  alphapose_extra.sln  main.cpp  requirements.txt
alphapose_extra/: PropertySheet.props  main.cpp  openvcdemo.vcxproj
alphapose_extra/x64/Release/: openvcdemo.exe.recipe  openvcdemo.iobj  openvcdemo.ipdb
alphapose_extra/x64/Release/openvcdemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  openvcdemo.lastbuildstate
x64/Release/: process.py
